software/pcx86/diag/ibm/5150/2.02/index.md
---
layout: page
title: IBM PC Diagnostics 2.02
permalink: /software/pcx86/diag/ibm/5150/2.02/
redirect_from: /disks/pcx86/diags/ibm/5150/2.02/
machines:
  - id: ibm5150
    type: pcx86
    debugger: true
    config: /machines/pcx86/machine/ibm/5150/mda/64kb/debugger/machine.xml
    autoMount:
      A:
        name: IBM PC Diagnostics 2.02
---

This disk displays the following startup messages:

    The IBM Personal Computer DIAGNOSTICS                                           
    Version 2.02 (C)Copyright IBM Corp 1981, 1983                                   
                                                                                    
    SELECT AN OPTION                                                                
                                                                                    
    0 - RUN DIAGNOSTIC ROUTINES                                                     
    1 - FORMAT DISKETTE                                                             
    2 - COPY DISKETTE                                                               
    3 - PREPARE SYSTEM FOR RELOCATION                                               
    9 - EXIT TO SYSTEM DISKETTE                                                     
                                                                                    
    ENTER THE ACTION DESIRED                                                        
 
{% include machine.html id="ibm5150" %}

### Directory of IBM PC Diagnostics 2.02

     Volume in drive A has no label
     Directory of A:\

    IBMBIO   COM*     4608   3-08-83  12:00p
    IBMDOS   COM*    17280   3-08-83  12:00p
    COMMAND  COM      3566   2-28-83  10:00a
    DCOPY    COM      1280   1-11-83  12:10p
    DFORMAT  COM       780   1-11-83  12:13p
    DIAGS    COM      3241   1-11-83   2:32p
    SHIPDISK COM       436   2-26-83  11:14a
    VERSION  202        78   4-07-83   9:18a
    US0CPU   DGS       621   1-31-83   1:23p
    US0STG   DGS       547   1-11-83  12:20p
    US0KBD   DGS       784   1-11-83  12:30p
    US1CDG   DGS      3912   1-28-83   7:05p
    US1DSK   DGS      3239   1-11-83   2:47p
    US1PAR   DGS       240   1-28-83   6:22p
    US1SRL   DGS      1518   1-28-83   6:16p
    US0PRT   DGS       617   4-07-83   9:01a
    US0GCTL  DGS      1558   1-11-83  12:34p
    US0EXP   DGS       762   1-28-83   6:40p
    US1FDK   DGS      2301   1-11-83   1:37p
    US0M87   DGS      2310   2-04-83  10:23a
    US1SDL   DGS      5045   1-11-83   1:57p
    US0BSC   DGS      5417   2-28-83   5:04p
           22 file(s)      60140 bytes
                           94720 bytes free
