software/pcx86/diag/ibm/5150/2.05/index.md
---
layout: page
title: IBM PC Diagnostics 2.05
permalink: /software/pcx86/diag/ibm/5150/2.05/
redirect_from: /disks/pcx86/diags/ibm/5150/2.05/
machines:
  - id: ibm5150
    type: pcx86
    debugger: true
    config: /machines/pcx86/ibm/5150/cga/64kb/debugger/machine.xml
    autoMount:
      A:
        name: IBM PC Diagnostics 2.05
---

This disk displays the following startup messages:

    The IBM Personal Computer DIAGNOSTICS                                           
    Version 2.05 (C)Copyright IBM Corp 1981, 1983                                   
                                                                                    
    SELECT AN OPTION                                                                
                                                                                    
    0 - RUN DIAGNOSTIC ROUTINES                                                     
    1 - FORMAT DISKETTE                                                             
    2 - COPY DISKETTE                                                               
    3 - PREPARE SYSTEM FOR RELOCATION                                               
    9 - EXIT TO SYSTEM DISKETTE                                                     
                                                                                    
    ENTER THE ACTION DESIRED                                                        

{% include machine.html id="ibm5150" %}

![IBM PC Diagnostics 2.05]({{ site.software.diskettes.server }}/pcx86/diag/ibm/5150/2.05/5150-DIAG-205.jpg)

### Directory of IBM PC Diagnostics 2.05

     Volume in drive A is DIAGS V205
     Directory of A:\

    IBMBIO   COM*     4608   3-08-83  12:00p
    IBMDOS   COM*    17152   3-08-83  12:00p
    COMMAND  COM      3582  10-21-83   9:00a
    DCOPY    COM      2302  10-21-83   9:04a
    DFORMAT  COM       872  10-21-83   9:05a
    DIAGS    COM      3585  10-21-83   9:10a
    SHIPDISK COM       436   6-03-83   9:52a
    VERSION  205        78  11-04-83  10:25a
    US0CPU   DGS       695  10-21-83   9:18a
    US0STG   DGS       557  10-21-83   9:17a
    US0KBD   DGS       784   6-03-83   9:27a
    US0EXP   DGS       762  10-21-83  11:14a
    US1CDG   DGS      3912   6-03-83   9:04a
    US1DSK   DGS      3455  10-21-83   9:21a
    US0PAR   DGS      1242  10-21-83   9:30a
    US1SRL   DGS      3661   9-30-83   7:03p
    US0PRT   DGS       870  10-21-83   9:28a
    US0GCTL  DGS      1564   6-03-83   9:32a
    US1FDK   DGS      2301   6-28-83  12:56p
    US0M87   DGS      2318  10-21-83   9:44a
    US1CPRT  DGS      2732  10-21-83   9:56a
    US1PCL   DGS      3029  11-22-83   4:17a
    US0CUA   DGS      3977  10-21-83  11:20a
    US1SDL   DGS      5045   6-03-83  10:50a
    US0BSC   DGS      5417   6-03-83   8:47a
    VENDOR-# DA1*        0   7-04-83  12:00a
           26 file(s)      74936 bytes
                           98816 bytes free

![IBM PC Diagnostics 2.05]({{ site.software.diskettes.server }}/pcx86/diag/ibm/5150/2.05/5150-DIAG-205.jpg)
